full width overlay - btn position fix on IE11
Left old style in, but commented. This works fine, but if the button width were to change for example, the left value would need to change correspondingly. Could be improved, but not sure of depth of browser support needed, so just making it look ok to get it out!

--- a/src/scss/partials/_full-width-overlay.scss
+++ b/src/scss/partials/_full-width-overlay.scss
@@ -58,7 +58,8 @@
   margin-right: 10px;
 
   @include mq($from: m) {
-    margin-left: -30%;
+    // margin-left: -30%;
+    left: 20%;
     bottom: 20px;
     width: 60%;
     position: absolute;
